--- a/product_brand/views/product_brand_view.xml
+++ b/product_brand/views/product_brand_view.xml
@@ -187,7 +187,8 @@
     <record model="ir.actions.act_window" id="action_product_brand">
         <field name="name">Brand</field>
         <field name="res_model">product.brand</field>
-        <field name="view_type">form</field>
+        <field name="binding_model">product.brand</field>
+        <field name="binding_views">form</field>
         <field name="view_mode">kanban,form,tree</field>
     </record>
 
